# thinkwork

./: .editorconfig  .gitignore  .npmrc  AGENTS.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  app.json  client-dashboard.html  discovery-presession-brief.html  discovery-tool-guide.html  discovery-tool.html  discovery-value-alignment.html  opportunity-pipeline.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.Codex/: slack-app-manifest-dev.json
.github/: PULL_REQUEST_TEMPLATE.md  homebrew-formula.rb.template
.review/: thinkwork-harness-messaging-feedback.md
docs/: POSITIONING.md  STYLE-AUDIT.md  STYLE.md  astro.config.mjs  evaluations-trust-core-e2e-test-plan.md  package.json
plans/: 2026-04-19-001-feat-compounding-memory-refinement-plan.md  2026-04-19-002-feat-hierarchical-aggregation-plan.md  2026-04-19-003-refactor-admin-wiki-graph-plan.md  2026-04-19-004-feat-admin-wiki-module-plan.md  2026-04-19-004-feat-cli-wiki-commands-plan.md  2026-04-19-005-refactor-mobile-memories-to-wiki-plan.md  2026-04-19-006-feat-mobile-wiki-force-graph-plan.md  2026-04-20-001-handoff-mobile-graph-densification-and-dogfood.md  2026-04-20-002-feat-compile-link-densification-plan.md  2026-04-20-003-feat-mobile-graph-refinements-plan.md  2026-04-20-004-fix-www-headline-orphan-plan.md  2026-04-20-005-handoff-compile-reliability-and-read-surfaces.md  2026-04-20-006-handoff-cluster-enrichment-and-followups.md  2026-04-20-007-handoff-cluster-enrichment-and-validation.md  (+1 more)
(+4206 files in other folders)
